--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "homepage": "https://tmuzanenhamo.github.io/mywebsite",
   "dependencies": {
     "@material-ui/core": "^4.7.1",
+    "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "buttercms": "^1.2.1",
     "dayjs": "^1.8.17",
     "emailjs-com": "^2.4.1",
+    "express": "^4.17.1",
     "express-session": "^1.17.0",
     "font-awesome": "^4.7.0",
     "gh-pages": "^2.1.1",
