--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "homepage": "https://tmuzanenhamo.github.io/mywebsite",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-brands-svg-icons": "^5.12.0",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "@material-ui/core": "^4.7.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
@@ -44,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.0"
   }
 }
