--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.17.0",
     "font-awesome": "^4.7.0",
     "gh-pages": "^2.1.1",
+    "graphql-request": "^1.8.2",
     "mdbreact": "^4.23.0",
     "next": "^9.1.4",
     "react": "^16.12.0",
@@ -25,8 +26,10 @@
     "react-dayjs": "^0.1.6",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-markdown": "^4.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-static": "^7.2.3",
     "reactstrap": "^8.2.0"
   },
   "scripts": {
