--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dayjs": "^0.1.6",
     "react-dom": "^16.12.0",
+    "react-ga": "^2.7.0",
     "react-helmet": "^5.2.1",
     "react-markdown": "^4.2.2",
     "react-router-dom": "^5.1.2",
