--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-ga": "^2.7.0",
     "react-helmet": "^5.2.1",
     "react-markdown": "^4.2.2",
+    "react-pdf": "^4.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-static": "^7.2.3",
