--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
-    "@material-ui/core": "^4.7.1",
+    "@material-ui/core": "^4.8.3",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "buttercms": "^1.2.1",
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "font-awesome": "^4.7.0",
+    "gatsby": "^2.18.22",
     "gh-pages": "^2.1.1",
     "graphql-request": "^1.8.2",
     "mdbreact": "^4.23.0",
@@ -32,7 +33,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-static": "^7.2.3",
-    "reactstrap": "^8.2.0"
+    "reactstrap": "^8.2.0",
+    "styled-components": "^5.0.0"
   },
   "scripts": {
     "predeploy": "npm run build",
