--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
     "@material-ui/core": "^4.8.3",
+    "antd": "^4.2.3",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "buttercms": "^1.2.1",
@@ -34,6 +35,7 @@
     "react-scripts": "3.2.0",
     "react-static": "^7.2.3",
     "reactstrap": "^8.2.0",
+    "semantic-ui-css": "^2.4.1",
     "styled-components": "^5.0.0"
   },
   "scripts": {
