--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-pdf": "^4.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-simple-flex-grid": "^1.3.21",
     "react-static": "^7.2.3",
     "reactstrap": "^8.2.0",
     "semantic-ui-css": "^2.4.1",
