--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "express-session": "^1.17.0",
     "font-awesome": "^4.7.0",
     "gatsby": "^2.18.22",
-    "gh-pages": "^2.1.1",
     "graphql-request": "^1.8.2",
     "mdbreact": "^4.23.0",
     "next": "^9.1.4",
@@ -60,6 +59,7 @@
     ]
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.12.0"
+    "@fortawesome/fontawesome-free": "^5.12.0",
+    "gh-pages": "^2.2.0"
   }
 }
